--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <i class="fas fa-cog"></i>
         </div>
     </header>
-    <main>
+    <main class="main__home">
         <h1 class="home__title">최근 재생한 항목</h1>
         <ul class="recentplay">
             <li class="recentplay__hiphopdrive">
@@ -31,7 +31,6 @@
                 <span>Korean HipHop/Rap 랩 모음</span>
             </li>
         </ul>
-
         <h1 class="home__title">자주 반복하여 듣는 음악</h1>
         <ul class="repeatplay">
             <li class="repeatplay__jazzstandards">
@@ -47,8 +46,8 @@
                 <span>Hip-Hop 2020</span>
             </li>
         </ul>
-
     </main>
+
     <div class="playbar">
         <div class="playbar__column1">
             <span class="playbar__icon heart">
@@ -68,6 +67,7 @@
             </span>
         </div>
     </div>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-items">
@@ -101,6 +101,7 @@
             </li>
         </ul>
     </nav>
+
 </body>
 
 </html>
