mobile screen add

--- a/library-music-1.html
+++ b/library-music-1.html
@@ -114,6 +114,9 @@
             </li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigscreen__text">윈도우 크기를 줄여주세요</span>
+    </div>
 </body>
 
 </html>
